# connectors-fds

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: pull-request-template.md
.github/workflows/: deploy.yaml  deploy_docker.yaml  test_integration.yml  test_integration_ubuntu.yml  test_integration_windows.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml  tesy.yaml  ubuntu_nightlies.yml
examples/: fds_example.py  input_no_vents.fds  input_with_vents.fds  load_historic_runs.py  run_simulation_no_vents.py  run_simulation_vents.py  sprinkler_data.csv  sprinkler_validation_data.csv
examples/example_results/: input_with_vents.fds  supply_exhaust_vents.fds  supply_exhaust_vents.out  supply_exhaust_vents.smv  supply_exhaust_vents_1_1.s3d  supply_exhaust_vents_1_1.s3d.sz  supply_exhaust_vents_1_1.sf  supply_exhaust_vents_1_1.sf.bnd  supply_exhaust_vents_1_2.s3d  supply_exhaust_vents_1_2.s3d.sz  supply_exhaust_vents_1_2.sf  supply_exhaust_vents_1_2.sf.bnd  supply_exhaust_vents_1_3.s3d  supply_exhaust_vents_1_3.s3d.sz  supply_exhaust_vents_1_3.sf  supply_exhaust_vents_1_3.sf.bnd  supply_exhaust_vents_1_4.sf  supply_exhaust_vents_1_4.sf.bnd  supply_exhaust_vents_1_5.sf  supply_exhaust_vents_1_6.sf  supply_exhaust_vents_2_1.s3d.sz  supply_exhaust_vents_cpu.csv  supply_exhaust_vents_devc.csv  supply_exhaust_vents_hrr.csv  supply_exhaust_vents_line.csv  supply_exhaust_vents_steps.csv
examples/results/: supply_exhaust_vents.smv  supply_exhaust_vents_1_1.s3d  supply_exhaust_vents_1_1.s3d.sz  supply_exhaust_vents_1_1.sf  supply_exhaust_vents_1_2.s3d  supply_exhaust_vents_1_2.s3d.sz  supply_exhaust_vents_1_2.sf  supply_exhaust_vents_1_2.sf.bnd  supply_exhaust_vents_1_3.s3d  supply_exhaust_vents_1_3.s3d.sz  supply_exhaust_vents_1_3.sf  supply_exhaust_vents_1_4.sf  supply_exhaust_vents_1_4.sf.bnd  supply_exhaust_vents_1_5.sf  supply_exhaust_vents_1_5.sf.bnd  supply_exhaust_vents_2.xyz  supply_exhaust_vents_2_1.s3d  supply_exhaust_vents_2_1.s3d.sz  supply_exhaust_vents_2_1.sf  supply_exhaust_vents_2_1.sf.bnd  supply_exhaust_vents_2_2.s3d  supply_exhaust_vents_2_2.s3d.sz  supply_exhaust_vents_2_2.sf  supply_exhaust_vents_2_3.s3d  supply_exhaust_vents_2_3.s3d.sz  supply_exhaust_vents_2_3.sf  supply_exhaust_vents_2_3.sf.bnd  supply_exhaust_vents_2_4.sf  supply_exhaust_vents_2_4.sf.bnd  supply_exhaust_vents_2_5.sf  supply_exhaust_vents_cpu.csv  supply_exhaust_vents_devc.csv  supply_exhaust_vents_devc_ctrl_log.csv  supply_exhaust_vents_hrr.csv  supply_exhaust_vents_steps.csv
simvue_fds/: connector.py  helpers.py  smokeview.py  utils.py
simvue_integrations_fds/: __init__.py  connector.py
tests/: conftest.py
tests/integration/: test_fds.py
tests/unit/: test_fds_csv_parser.py  test_fds_file_deletion.py  test_fds_file_upload.py  test_fds_header_parser.py  test_fds_line_parser.py  test_fds_load.py  test_fds_log_parser.py  (+4 more)
(+375 files in other folders)
