[project]
name = "simvue-fds"
version = "2.0.4"
description = "Connector to allow you to easily add Simvue tracking and monitoring to FDS (Fire Dynamics Simulator) simulations."
authors = [
    {name = "Matt Field",email = "matthew.field@ukaea.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "simvue (>=2.2.2)",
    "simvue-connector (>=1.0.0)",
    "ukaea-multiparser (>=1.0.5)",
    "f90nml (>1.4.3)",
    "fdsreader (>=1.11.7,<2.0.0)",
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = [
    "tracking",
    "monitoring",
    "metrics",
    "alerting",
    "metrics-gathering"
]

[project.urls]
homepage = "https://simvue.io"
repository = "https://github.com/simvue-io/connectors-fds"
documentation = "https://docs.simvue.io"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-xdist = "^3.8.0"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
